discussion/jgit/163403/163403_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Fix ProtectedMembersInFinalClass warning flagged by error prone

Running recent error prone version complaining on that code:

CharacterHead.java:22: error: [ProtectedMembersInFinalClass] Make
members of final classes package-private: <init>
	protected CharacterHead(char expectedCharacter) {
	          ^
    (see https://errorprone.info/bugpattern/ProtectedMembersInFinalClass)
  Did you mean 'CharacterHead(char expectedCharacter) {'

Bug: 562756
Change-Id: Ic46a0b07e46235592f6e63db631f583303420b73
Signed-off-by: David Ostrovsky <david@ostrovsky.org>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Matthias Sohn
Date: 2020-06-04 14:24:26.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-04 14:24:32.000000000
Message: 
Patch Set 4:

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3267/
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-04 14:55:12.000000000
Message: 
Patch Set 4: Verified+1

Build Successful 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3267/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2020-06-04 15:16:59.000000000
Message: 
Patch Set 4: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2020-06-04 15:17:03.000000000
Message: 
Change has been successfully merged by Matthias Sohn
----------------------------------------------------------------------------------------------------------------------
